tests/data/parseerror/invalid-property-2.php
<?php

class foo {

	public PHP_VERSION = 0;

}
